# project_DES

./: .gitignore  LICENCE.txt  README.md  bit_utils.py  block_utils.py  cbc.py  des.py  ecb.py  ecbe.py  feistel.py  file_utils.py  key.py  mangler.py  permute.py  pyproject.toml  test.py
DES/: bit_utils.py  des.py  feistel.py  permute.py  test.py
des/: __init__.py  bit_utils.py  crypto.py  feistel.py  key.py  mangler.py  permute.py
examples/: file_cipher.py  string_cipher.py
project_DES/: __init__.py  project_DES.py
project_DES/des_core/: __init__.py  crypto.py  feistel.py  mangler.py
project_DES/test/: des_core_test.py
test/: des_core_test.py  projectDES_test.py
